<resources>
    <string name="app_name">Intent</string>
    <string name="Calculator">Калькулятор</string>
    <string name="Result">Поле вывода информации</string>
    <string name="First">Первый элемент</string>
    <string name="Second">Второй элемент</string>
    <string name="Sum">+</string>
    <string name="dif">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="ReturnResult">Передать данные</string>
    <string name="ваы">Результат</string>
</resources>