<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editFirstET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/First"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editSecondET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Second"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutOne">

        <Button
            android:id="@+id/buttonSumBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/Sum"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonDifBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/dif"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonMultBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/mult"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonDivBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/div"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonReturnResultBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ReturnResult"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutOne" />

</androidx.constraintlayout.widget.ConstraintLayout>